# ImageRecognitionProject-UNT

./: .gitignore  README.mdown
camStream/: CMakeCache.txt  CMakeLists.txt  Makefile  camStream.cpp  camstream  cmake_install.cmake
presentation/: OBJECT TRACKING.pptx
selector/: CMakeLists.txt  Makefile  defines.h  selector.cpp  video.avi
selector/testImages/: lenaN.tif
